--- a/Editing_All_Blocks.mjml
+++ b/Editing_All_Blocks.mjml
@@ -59,7 +59,7 @@ Copy End */ -->
         <mj-text color="#074365" align="left" font-weight="bold" font-size="36px" line-height="42px" font-family="Roboto, Noto Sans TC, Arial, sans-serif"> Left Align Headline (optional, 36pt 20 chars max) </mj-text>
         <mj-text color="#000" align="left" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif"> Single Column Copy 16pt </mj-text>
         <mj-text> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia a assumenda nulla in quisquam optio quibusdam fugiat perspiciatis nobis, ad tempora culpa porro labore. Repudiandae accusamus obcaecati voluptatibus accusantium perspiciatis. </mj-text>
-        <mj-button background-color="#F96D8C" color="#fff" width="90%" font-size="16px" line-height="1.5" font-weight="bold" align="left" padding="10px 20px 10px 20px" inner-padding="20px 20px" border-radius="4px" href="https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Discover green tips during lockdown</mj-button>
+        <mj-button background-color="#F96D8C" color="#fff" width="90%" font-size="16px" line-height="1.5" font-weight="bold" align="left" padding="10px 20px 10px 20px" inner-padding="20px 20px" border-radius="4px" href="https://www.greenpeace.org/eastasia/">Discover green tips during lockdown</mj-button>
       </mj-column>
     </mj-section>
     <!--           /* Content Block 2. Single Column
@@ -83,10 +83,10 @@ w/ Text CTA Link Left Aligned Start */ -->
         <mj-text color="#074365" align="left" font-weight="bold" font-size="36px" line-height="42px"> Left Align Headline (optional, 36pt 20 chars max) </mj-text>
         <mj-text color="#000" align="left" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif"> Single Column Copy 16pt Placerat vel, pulvinar et risus. Cras tincidunt mi et turpis eleifend, at rutrum sem interdum. In tristique justo nulla, eu laoreet dui posuere fermentum. Vivamus fringilla justo ac ornare condimentum. In nec est ligula. </mj-text>
         <mj-text color="#074365" align="left" font-weight="bold" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-bottom="10px">
-          <a href="https://www.greenpeace.org/eastasia/" target="_blank" style="color:#074365; text-decoration:underline; font-weight: bold"> > Call to action</a>
+          <a href="https://www.greenpeace.org/eastasia/" target="_blank"> Call to action</a>
         </mj-text>
         <mj-text color="#074365" align="left" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-bottom="10px">
-          <a href="https://www.greenpeace.org/eastasia/" target="_blank" style="color:#074365; text-decoration:underline; font-weight: bold"> > Call to action</a>
+          <a href="https://www.greenpeace.org/eastasia/" target="_blank"> Call to action</a>
         </mj-text>
       </mj-column>
     </mj-section>
@@ -367,6 +367,8 @@ Copy + Img w/ CTA End */ -->
         <mj-text color="#074365" align="center" font-weight="bold" font-size="28px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-top="10px" padding-bottom="10px">您有3分鐘的時間嗎？</mj-text>
         <mj-text color="#000" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" align="center">
           <p>整裝待發迎接2021年的，當然還有綠色和平項目團隊！邀請你填寫3分鐘問卷發表寶貴意見，我們定必細心聆聽，並按此調整來年項目方向，同時讓活動規劃及會員服務更貼近你的需求，一起實現更多為地球許下的願望。</p>
+        </mj-text>
+        <mj-text color="#000" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" align="center">
           <a href="http://greenpeace.org" target="_blank">填寫3分鐘項目問卷</a>
         </mj-text>
       </mj-column>
@@ -376,14 +378,17 @@ Copy + Img w/ CTA End */ -->
     <mj-section background-color="#fff" padding-top="10px" padding-bottom="10px">
       <mj-group>
         <mj-column width="33%" padding-left="0px" padding-right="0px">
-          <mj-image src="https://via.placeholder.com/560x560.png?text=200x200+Retina+Image" width="200px" alt="ACT NOW" align="center" padding-left="20px" padding-right="0px" padding-bottom="10px" padding-top="10px"></mj-image>
+          <mj-image src="https://via.placeholder.com/560x560.png?text=200x200+Retina+Image" width="200px" align="center" padding-left="20px" padding-right="0px" padding-top="10px"></mj-image>
         </mj-column>
-        <mj-column width="66%" padding-top="4px">
-          <mj-text color="#000" align="left" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-top="10px" padding-bottom="10px">
+        <mj-column width="66%">
+          <mj-text color="#000" align="left" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-bottom="0px">
             <p>氣候 / 應對氣候危機，亞洲晉身進擊的巨人</p>
           </mj-text>
-          <mj-text color="#000" align="left" font-size="14px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-bottom="10px" css-class="mobHide">
+          <mj-text color="#000" align="left" font-size="14px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-top="0px" padding-bottom="0px" css-class="mobHide">
             <p>當科學家費煞思量探索海洋萬米深淵的奧秘，早有企業聞風而至攻佔地盤。</p>
+          </mj-text>
+          <mj-text color="#000" align="left" font-size="14px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-top="0px" padding-bottom="0px">
+            <p><a href="http://greenpeace.org" target="_blank">[閱讀更多]</a></p>
           </mj-text>
         </mj-column>
       </mj-group>
