--- a/Editing_All_Blocks.mjml
+++ b/Editing_All_Blocks.mjml
@@ -330,10 +330,10 @@ Copy + Img w/ CTA End */ -->
         <mj-text color="#000" align="center" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" css-class="lrPad20">守護大嶼，促請政府公允規劃，您願意號召身邊的親友一起加入嗎？</mj-text>
       </mj-column>
       <mj-column padding="0px">
-        <mj-button background-color="#4267B2" color="#fff" width="180px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://www.facebook.com/sharer/sharer.php?u=https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Facebook 分享</mj-button>
+        <mj-button background-color="#4267B2" color="#fff" width="120px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://www.facebook.com/sharer/sharer.php?u=https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Facebook</mj-button>
       </mj-column>
       <mj-column padding="0px">
-        <mj-button background-color="#25d366" color="#fff" width="180px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://api.whatsapp.com/send?text=https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Whatsapp 分享</mj-button>
+        <mj-button background-color="#25d366" color="#fff" width="120px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://api.whatsapp.com/send?text=https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Whatsapp</mj-button>
       </mj-column>
     </mj-section>
     <!-- /* Content Block 18. HK Share End */ -->
@@ -343,10 +343,10 @@ Copy + Img w/ CTA End */ -->
         <mj-text color="#000" align="center" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" css-class="lrPad20">您願意號召身邊的親友一起加入嗎？</mj-text>
       </mj-column>
       <mj-column padding="0px">
-        <mj-button background-color="#4267B2" color="#fff" width="180px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://www.facebook.com/sharer/sharer.php?u=https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Facebook 分享</mj-button>
+        <mj-button background-color="#4267B2" color="#fff" width="120px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://www.facebook.com/sharer/sharer.php?u=https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Facebook</mj-button>
       </mj-column>
       <mj-column padding="0px">
-        <mj-button background-color="#00B900" color="#fff" width="180px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Line 分享 </mj-button>
+        <mj-button background-color="#00B900" color="#fff" width="120px" font-size="16px" line-height="1.5" font-weight="bold" padding="10px" inner-padding="12px 20px" border-radius="4px" href="https://www.greenpeace.org/eastasia/" font-family="Roboto, Noto Sans TC, Arial, sans-serif">Line</mj-button>
       </mj-column>
     </mj-section>
     <!-- /* Content Block 19. TW Share End */ -->
@@ -416,10 +416,11 @@ Copy + Img w/ CTA End */ -->
         </mj-text>
         <mj-divider padding-top="8px" />
         <mj-image src="https://www.greenpeace.org/static/planet4-hongkong-stateless/2021/02/d8d6e645-icons8-calendar-80.png" alt="" align="center" border="none" width="48px"></mj-image>
-        <mj-text color="#000" align="center" font-size="20px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-bottom="0px" font-weight="bold">
+        <mj-text color="#000" align="center" font-size="24px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif" padding-bottom="0px" font-weight="bold">
           <p>2021年2月27日 星期六</p>
-          <p>11am- 12pm</p>
+          <p>11am - 12pm</p>
         </mj-text>
+        <mj-divider padding-top="16px" />
       </mj-column>
     </mj-section>
     <!-- /* Content Block 24. Event Confirmation End */ -->
@@ -437,17 +438,6 @@ Copy + Img w/ CTA End */ -->
       </mj-group>
     </mj-section>
     <!-- /* Content Block 25. YES NO */ -->
-    <!-- /* Content Block 2. Single Column Left ALign Copy w/ CTA Center Align Start */ -->
-    <mj-section background-color="#fff" padding-top="20px" padding-bottom="20px">
-      <mj-column>
-        <mj-text color="#074365" align="left" font-weight="bold" font-size="36px" line-height="42px" font-family="Roboto, Noto Sans TC, Arial, sans-serif"> Left Align Headline (optional, 36pt 20 chars max) </mj-text>
-        <mj-text color="#000" align="left" font-size="16px" line-height="1.5" font-family="Roboto, Noto Sans TC, Arial, sans-serif"> Single Column Copy 16pt </mj-text>
-        <mj-text> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia a assumenda nulla in quisquam optio quibusdam fugiat perspiciatis nobis, ad tempora culpa porro labore. Repudiandae accusamus obcaecati voluptatibus accusantium perspiciatis. </mj-text>
-        <mj-button background-color="#F96D8C" color="#fff" width="90%" font-size="16px" line-height="1.5" font-weight="bold" align="left" padding="10px 20px 10px 20px" inner-padding="20px 20px" border-radius="4px" href="https://www.greenpeace.org/eastasia/">Discover green tips during lockdown</mj-button>
-      </mj-column>
-    </mj-section>
-    <!--           /* Content Block 2. Single Column
-Copy w/ CTA Center Align End */ -->
     <!-- Footer Start-->
     <mj-section padding="0px" background-color="#fff" padding="20px">
       <!--Social Icons-->
@@ -481,7 +471,7 @@ Copy w/ CTA Center Align End */ -->
     <mj-section background-color="#fff" padding-bottom="10px" padding-top="10px" padding-left="0px" padding-right="0px">
       <mj-column>
         <mj-text color="#000" font-size="16px" align="left" padding-bottom="0px" padding-top="0px" font-family="Roboto, Noto Sans TC, Arial, sans-serif">
-          <p>Copyright ©%%xtyear%% Greenpeace</p>
+          <p>© %%xtyear%% Greenpeace</p>
           <p>10/F, Stelux House, 698 Prince Edward Road East, San Po Kong, Kowloon, Hong Kong </p>
         </mj-text>
       </mj-column>
